--- a/wp-content/themes/cyrilbroult/package.json
+++ b/wp-content/themes/cyrilbroult/package.json
@@ -47,5 +47,11 @@
 		"zip": "node node_scripts/zip.js cyrilbroult",
 		"bundle": "run-s production zip"
 	},
-	"prettier": "@wordpress/prettier-config"
+	"prettier": "@wordpress/prettier-config",
+	"dependencies": {
+		"swiper": "^11.0.3"
+	},
+	"external": {
+		"swiper": "^11.0.3"
+	}
 }
